[package]
authors = ["Ruth Marks"]
edition = "2021"
name = "crosswitch"
publish = false
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.72"
wasm-bindgen = "0.2.95"

[dependencies.web-sys]
version = "0.3.72"
features = ['CanvasRenderingContext2d', 'Document', 'Element', 'HtmlCanvasElement', 'MouseEvent', 'Window']
